@@ -1117,6 +1117,79 @@ Grid *gridLineSearchT(Grid *grid, int node, double optimized_cost_limit )
   return grid;
 }
 
+Grid *gridLineSearchTForCost(Grid *grid, int node )
+{
+  double dt, t;
+  double gold;
+  double alpha[2], ar[2], equality[2];
+  int iter;
+
+  int nodes1[2], nodes2[2];
+  int edge1, edge2, edgeId1, edgeId2;
+  int node1, node2;
+  double t0, t1, t2;
+
+  gold = ( 1.0 + sqrt(5.0) ) / 2.0;
+
+  /* do not allow geometry or ghost nodes to move */
+  if ( gridGeometryNode( grid, node ) ) return grid;
+  if ( gridNodeGhost(grid, node ) ) return NULL;
+
+  /* get the two edges involved (incident to node) */
+  edge1 = adjItem(adjFirst(gridEdgeAdj(grid), node));
+  if (EMPTY == edge1) return NULL;
+  edge2 = adjItem(adjNext(adjFirst(gridEdgeAdj(grid), node)));
+  if (EMPTY == edge2) return NULL;
+
+  /* make sure the we are on a single edge and get the adjacent nodes */
+  if ( grid != gridEdge(grid,edge1,nodes1,&edgeId1) ) return NULL;
+  if ( grid != gridEdge(grid,edge2,nodes2,&edgeId2) ) return NULL;
+  if ( edgeId1 != edgeId2 ) return NULL;
+  node1 = nodes1[0] + nodes1[1] - node; 
+  node2 = nodes2[0] + nodes2[1] - node; 
+
+  /* calculate dt to point in the parameter direction of `longer' edge */
+  if ( grid != gridNodeT( grid, node1, edgeId1, &t1 ) ) return NULL;
+  if ( grid != gridNodeT( grid, node2, edgeId1, &t2 ) ) return NULL;
+  dt = 1.0e-6*(t2-t1);
+
+  gridNodeAR( grid, node, &ar[0] );
+  t = t0 + dt;
+  if (grid != gridEvaluateEdgeAtT(grid, node, t ) ) return NULL;
+  gridNodeAR( grid, node, &ar[1] );
+  
+  if ( ar[1] < ar[0] ) dt = -dt;
+
+  /* initialize the alpha, ar, and equality arrays */
+  alpha[0] = 0.0;
+  t = t0 + alpha[0]*dt;
+  if (grid != gridEvaluateEdgeAtT(grid, node, t ) ) return NULL;
+  gridNodeAR( grid, node, &ar[0] );
+
+  alpha[1] = 1.0;
+  t = t0 + alpha[1]*dt;
+  if (grid != gridEvaluateEdgeAtT(grid, node, t ) ) return NULL;
+  gridNodeAR( grid, node, &ar[1] );
+
+  /* try larger alphas if equality is improving and ar is valid */
+  iter = 0;
+  while ( ar[1] > ar[0] && 
+	  iter < 100 ) {
+    iter++;
+    alpha[0] = alpha[1]; ar[0] = ar[1]; equality[0] =  equality[1];
+    alpha[1] = alpha[0] * gold;
+    t = t0 + alpha[1]*dt;
+    if (grid != gridEvaluateEdgeAtT(grid, node, t ) ) return NULL;
+    gridNodeAR( grid, node, &ar[1] );
+  }
+
+  /* use the `best' t and update node xyz, edge t, and face uv */
+  t = t0 + alpha[0]*dt;
+  if (grid != gridEvaluateEdgeAtT(grid, node, t ) ) return NULL;
+
+  return grid;
+}
+
 Grid *gridLineSearchUV(Grid *grid, int node, double *dudv,
 		       double optimized_cost_limit )
 {
