@@ -73,6 +73,7 @@ Grid *gridSmoothNode(Grid *g, int node, GridBool smoothOnSurface );
 Grid *gridSmoothNodeFaceMR(Grid *g, int node );
 
 Grid *gridLineSearchT(Grid *g, int node, double optimized_cost_limit );
+Grid *gridLineSearchTForCost(Grid *g, int node );
 Grid *gridLineSearchUV(Grid *g, int node, double *dudv, 
 		       double optimized_cost_limit );
 Grid *gridOptimizeFaceUV(Grid *g, int node, double *dudv );
