@@ -1,3 +1,7 @@
+2007-06-06 12:45 Mike Park  <mike.park@nasa.gov>
+
+	* src/gridcad.c (gridLineSearchTForCost) line search T for volumr cost.
+
 2007-06-05 15:40 Mike Park  <mike.park@nasa.gov>
 
 	* src/gridcad.c (gridLinearProgramUV) modified to optimize volume cost
